--- a/index.css
+++ b/index.css
@@ -1,6 +1,173 @@
-.bg-img {
-  background-image: url("./imgs/bg.jpg");
-  background-color: brown;
-  background-size: cover;
-  background-position: center;
+
+/* Reset css */
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: inherit;
+  transition: opacity 0.1s ease;
+  -webkit-tap-highlight-color: transparent;
+  scroll-behavior: smooth;
+  user-select: none;
+  -webkit-user-select: none;
 }
+
+html {
+  line-height: 1.6rem;font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+
+/* Main code */
+
+/* wheel-icon section start */
+.teams-introduce .container .row .teams-title {
+  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  -webkit-background-clip: text;
+  -webkit-color: transparent;
+  background-clip: text;
+  color: transparent;
+  font-size: 50px;
+  letter-spacing: 1px;
+  font-family: 'Montserrat';
+  padding: 0;
+  margin: 0;
+}
+
+
+.teams-introduce .wheel-icon {
+  width: 350px;
+  height: 250px;
+  margin: 70px 0;
+  margin-left: 50px;
+  padding: 0;
+}
+.teams-introduce .circle {
+  height: 250px;
+  width: 250px;
+  position: relative;
+  background: url('./imgs/bg.png') center center / cover;
+}
+.teams-introduce .team-icon {
+  display: block;
+  position: absolute;
+  bottom: 50%;
+  right: 50%;
+  width: 50%;
+  height: 50%;
+  transform-origin: 100% 100%;
+  transform: rotate(calc(45deg + var(--index) * 90deg));
+  transition: transform 0.5s;
+}
+.teams-introduce .circle .teams-icon-img {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 75%;
+  height: 75%;
+  transform-origin: 50% 50%;
+  transition: transform 0.5s;
+  transform: rotate(calc(-45deg - var(--index) * 90deg));
+}
+
+/* wheel-icon section end */
+
+/* text-introduce section start */
+.teams-introduce-text {
+  width: 720px;
+  height: 300px;
+  background: rgba(248, 248, 248, 0.6);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(25px);
+  border-radius: 10px;
+  margin: 40px 0;
+  margin-left: 15px;
+}
+
+.teams-introduce-text span {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 43px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.01em;
+  background: linear-gradient(180deg, #DE1D1D 0%, #FF4869 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  border: 1px solid #FFFFFF;
+  text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.23);
+}
+
+.teams-introduce-text h1 {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 37px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.17em;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color: #fff;
+}
+
+.teams-introduce-text p {
+  font-family: 'Crimson Pro';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: justify;
+  letter-spacing: 0.03em;
+  color: #071226;
+}
+
+.teams-introduce-text a {
+  text-decoration: none;
+  border: 1px solid #FC6373;
+  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  -webkit-background-clip: text;
+  -webkit-color: transparent;
+  background-clip: text;
+  color: transparent;
+  padding: 10px 30px;
+  border-radius: 35px;
+  letter-spacing: 0.03em;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 18px;   
+}
+
+.teams-introduce-text a:hover {
+  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  color: #fff;
+}
+
+/* text-introduce section end */
+
+/* Button section start */
+
+.btn-rotate {
+  display: flex;
+  flex-direction: column;
+  margin: 0 5px 0 5px;
+}
+.btn-rotate-up,
+.btn-rotate-down{
+  background-color: #fff;
+  color: #FC6373;
+  cursor: pointer;
+  padding: 0;
+  font-size: 30px;
+}
+
+
+/* Button section end */
