--- a/activities.css
+++ b/activities.css
@@ -37,7 +37,6 @@
   color: white;
   position: relative;
   margin: 0 5px;
-
 }
 
 .activity img {
@@ -51,13 +50,10 @@
   height: 19.68px;
   bottom: 30%;
   left: 10%;
-
   display: flex;
   justify-content: center;
   align-items: center;
-
   text-transform: uppercase;
-  
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 600;
@@ -66,15 +62,12 @@
   /* identical to box height, or 182% */
   text-align: center;
   letter-spacing: 0.03em;
-
   /* Yellow Gra */
 
   /* background: linear-gradient(180deg, #FFBF1A 0%, #FFDF38 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
   background-color: white;
-
-
   border-radius: 5px;
 }
 
@@ -143,7 +136,7 @@
 }
 
 
-.showmore {
+.show-more {
   display: flex;
   font-family: 'Montserrat';
   font-style: normal;
@@ -159,6 +152,7 @@
   background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  color: transparent;
   background-clip: text;
   /* text-fill-color: transparent; */
   margin-bottom: 45px;
