--- a/activities.css
+++ b/activities.css
@@ -135,48 +135,43 @@
   border-radius: 10px;
 }
 
+.activities_read_more {
+  /* background: rgba(248, 248, 248, 0.6); */
+  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */ 
+  /* backdrop-filter: blur(25px); */
+  border-radius: 10px;
+  text-align: center;
+} 
+/* check box-shadow */
 
-.show-more {
-  display: flex;
+.activities_read_more a {
+  text-decoration: none;
+  border: 1px solid #FC6373;
+  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  -webkit-background-clip: text;
+  -webkit-color: transparent;
+  background-clip: text;
+  color: transparent;
+  padding: 10px 30px;
+  border-radius: 35px;
+  letter-spacing: 0.03em;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
-  line-height: 18px;
-  /* display: flex; */
-  align-items: center;
-  justify-content: center;
-  /* text-align: center; */
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+  line-height: 18px; 
+}
+
+.activities_read_more a:hover {
   background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: transparent;
-  background-clip: text;
-  /* text-fill-color: transparent; */
-  margin-bottom: 45px;
-  
+  color: #fff;
+  border: none;
 }
 
-.button-link {
-  /* font-weight: 500; */
-  fill: #FFFFFF;
-  color: #FFFFFF;
-  background-color: #FFFFFF00;
-  border-style: solid;
-  border-width: 2px 2px 2px 2px;
-  border-color: #FE9548;
-  border-radius: 40px 40px 40px 40px;
-  padding: 10px 35px 10px 35px;
-}
 
-.content {
-  color: black;
-}
 
 .carousel-control-prev {
-  background-color: red;
+  background-color: #ffc8dd;
   width: 5vh;
   height: 5vh;
   border-radius: 50%;
@@ -185,11 +180,10 @@
 }
 
 .carousel-control-next {
-  background-color: red;
+  background-color: #ffc8dd;
   width: 5vh;
   height: 5vh;
   border-radius: 50%;
   top: 50%;
   transform: translate(50%, -50%);
 }
-
