--- a/activities.css
+++ b/activities.css
@@ -1,6 +1,5 @@
-
 .activities-title {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 50px;
@@ -10,7 +9,7 @@
   text-align: center;
   letter-spacing: 0.01em;
   text-transform: uppercase;
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -25,8 +24,8 @@
 
 .activities .see-more a {
   text-decoration: none;
-  border: 1px solid #FC6373;
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  border: 1px solid #fc6373;
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   -webkit-background-clip: text;
   -webkit-color: transparent;
   background-clip: text;
@@ -34,25 +33,24 @@
   padding: 10px 30px;
   border-radius: 35px;
   letter-spacing: 0.03em;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
-  line-height: 18px; 
+  line-height: 18px;
   padding: 15px 65px;
 }
 
 .activities .see-more a:hover {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   color: #fff;
 }
 
 .activities_read_more a:hover {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   color: #fff;
   border: none;
 }
-
 
 .activities {
   position: relative;
@@ -62,7 +60,6 @@
 }
 
 .activities .item {
-  width: 472px;
   transition: all 0.5s;
   overflow: hidden;
   border-radius: 8px;
@@ -90,7 +87,6 @@
 .activities .item .item-activities-text {
   position: absolute;
   bottom: 0;
-
 }
 
 .activities .item .item-activities-text .item-activities-text-label {
@@ -98,7 +94,7 @@
   width: 65px;
   height: 20px;
   background-color: #fff;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
@@ -106,7 +102,7 @@
   letter-spacing: 0.03em;
   padding: 4px 12px;
   border-radius: 5px;
-  transform: translateY(50px);    
+  transform: translateY(70px);
   transition: all 0.5s;
   margin: 0;
   text-align: center;
@@ -116,28 +112,26 @@
 }
 
 .activities .item .item-activities-text .item-activities-text-label-meeting {
-  color: #FF4869;
+  color: #ff4869;
 }
 
 .activities .item .item-activities-text .item-activities-text-label-camping {
-  color: #039A36;
+  color: #039a36;
 }
 
 .activities .item .item-activities-text .item-activities-text-label-extra {
-  color: #015AE0;
+  color: #015ae0;
   width: 122px !important;
 }
 
-
-
 .activities .item .item-activities-text h5 {
   margin-top: 12px;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0.03em;
-  transform: translateY(50px);
+  transform: translateY(70px);
   transition: all 0.5s;
 }
 
@@ -147,13 +141,13 @@
 }
 
 .activities .item .item-activities-text .item-activities-text-sub {
-  font-family: 'Lato';
+  font-family: "Lato";
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
   line-height: 12px;
   letter-spacing: 0.03em;
-  color: #E9E9E9;
+  color: #e9e9e9;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.4s, opacity 0.4s;
@@ -166,13 +160,13 @@
 }
 
 .activities .item .item-activities-text .item-activities-text-time {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 10px;
   line-height: 18px;
   letter-spacing: 0.03em;
-  color: #D7D7D7;
+  color: #d7d7d7;
 }
 
 .owl-next,
@@ -183,13 +177,13 @@
   width: 42px;
   height: 42px;
   border-radius: 50% !important;
-  color: #FE9548  !important;
-  background:rgba(255, 255, 255, 0.4) !important;
+  color: #fe9548 !important;
+  background: rgba(255, 255, 255, 0.4) !important;
 }
 
 .owl-next:hover,
 .owl-prev:hover {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%) !important;
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%) !important;
   color: #fff !important;
 }
 
