--- a/blogs.css
+++ b/blogs.css
@@ -1,48 +1,55 @@
 :root {
-  --main-color: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  --main-color: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
 }
 
 .cards-wrapper {
   display: flex;
   justify-content: center;
-  }
+}
 .card img {
   max-width: 100%;
   max-height: 100%;
-  }
+}
 .card {
   margin: 0 0.5em;
   box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
   border: none;
   border-radius: 0;
-  }
+}
 
 .carousel-control-prev {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   width: 5vh;
   height: 5vh;
   border-radius: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   left: 0 !important;
-  }
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  background-image: none !important;
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .carousel-control-next {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   width: 5vh;
   height: 5vh;
   border-radius: 50%;
   top: 50%;
   transform: translate(50%, -50%);
   right: 0 !important;
-  }
-
-
+}
 
 @media (min-width: 768px) {
-    .card img {
-      height: 11em;
-    }
+  .card img {
+    height: 11em;
+  }
 }
 
 .blogs {
@@ -56,13 +63,11 @@
   top: -80px;
 }
 
-
 .decor-3-1 {
   position: absolute;
   right: 8px;
   top: -80px;
 }
-
 
 .decor-4 {
   position: absolute;
@@ -70,39 +75,37 @@
   left: -20px;
 }
 
-
 .decor-4-1 {
   position: absolute;
   bottom: 180px;
 }
 
 .blogs-title {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   -webkit-background-clip: text;
   -webkit-color: transparent;
   background-clip: text;
   color: transparent;
   font-size: 50px;
   letter-spacing: 1px;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   padding: 0;
 }
 
 .blogs-inner {
-    padding: 1rem 0;
-    transition: all 0.5s;
+  padding: 1rem 0;
+  transition: all 1s;
 }
 
-
 .blogs-inner h5 {
-    font-family: 'Crimson Pro';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 18px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #000000;
+  font-family: "Crimson Pro";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #000000;
 }
 
 .blogs-inner h5:hover {
@@ -114,28 +117,28 @@
 }
 
 .blogs-inner p {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 18px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.03em;
-    color: #949BA4;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: #949ba4;
 }
 
 .blogs-inner span {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 18px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.03em;
-    color: #949BA4;
-    margin-bottom: 4px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: #949ba4;
+  margin-bottom: 4px;
 }
 
 .blogs-inner .card-blog {
@@ -144,6 +147,7 @@
   border: 1px solid transparent;
   background-color: #fff;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .blogs-inner .card-blog:hover::before {
@@ -166,13 +170,13 @@
 }
 
 .blogs-inner .read-btn-text {
-  font-family: 'Lato';
+  font-family: "Lato";
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
   line-height: 19px;
   letter-spacing: 0.03em;
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -180,7 +184,7 @@
   text-decoration: none;
 }
 
-.blogs-inner .read-btn  {
+.blogs-inner .read-btn {
   background-color: #fadec8;
   width: 18px;
   height: 18px;
@@ -191,10 +195,9 @@
   border-radius: 50%;
 }
 
-
 .blogs-inner .read-btn i {
   font-size: 12px;
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -211,8 +214,8 @@
 
 .blogs .see-more a {
   text-decoration: none;
-  border: 1px solid #FC6373;
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  border: 1px solid #fc6373;
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   -webkit-background-clip: text;
   -webkit-color: transparent;
   background-clip: text;
@@ -220,15 +223,15 @@
   padding: 10px 30px;
   border-radius: 35px;
   letter-spacing: 0.03em;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
-  line-height: 18px; 
+  line-height: 18px;
   padding: 15px 65px;
 }
 
 .blogs .see-more a:hover {
-  background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   color: #fff;
 }
